<resources>
    <string name="app_name">Swapparel</string>
    <string name="minus_30_dressing">Vous vous trouvez dans une région où le risque de gelure est élevé. Ne sortez qu\'en cas d\'extrême nécessité.</string>
    <string name="night">NUIT</string>
    <string name="morning">MATINÉE</string>
    <string name="afternoon">APRÈS-MIDI</string>
    <string name="evening">SOIRÉE</string>
    <string name="change">Changer</string>
    <string name="add_this">AJOUTER ÇA !</string>
    <string name="your_clothes">Vos vêtements</string>
    <string name="take_photo">Prenez le vêtement en photo !</string>
    <string name="choose_type">Vous n\'avez pas choisi le type !</string>
    <string name="choose_weather">Vous n\'avez pas choisi la météo appropriée !</string>
    <string name="choose_photo">Vous n\'avez pas mis de photo !</string>
    <string name="new_element">Nouvel élément ajouté !</string>
    <string name="not_enough_clothes">Vous n\'avez pas assez de vêtements, ajoutez-en au moins 10 !</string>
    <string name="not_enough_pairs">"Vous n'avez pas ajouté assez de vêtements qui iraient bien avec ce vêtement, ajoutez plus de : "</string>
    <string name="touch_me_senpai">Touchez-moi si ce n\'est pas la bonne couleur !</string>
    <string name="i_advise">Je vous conseille</string>
    <string name="i_recommand">Je vous recommande</string>
    <string name="todays_advice">Conseil :</string>
    <string name="a_perfect_weather">Un temps parfait pour</string>
    <string name="tonight">cette nuit.</string>
    <string name="goodnite">Bonne nuit !</string>
    <string name="this_mornin">ce matin.</string>
    <string name="goodday">Bonne journée !</string>
    <string name="this_afternoon">cet après-midi.</string>
    <string name="good_afternoon">Bon après-midi !</string>
    <string name="tonite">ce soir.</string>
    <string name="good_tonight">Bonne soirée !</string>
    <string name="superhot">Un temps ultra chaud</string>
    <string name="debardeur">un t-shirt/débardeur avec un short, ou pantalon ultraléger.</string>
    <string name="veryhot">Un temps très chaud</string>
    <string name="tshirt">un t-shirt, avec un pantalon classique ou pourquoi pas un short.</string>
    <string name="agradable">Un temps agréable</string>
    <string name="classic_tee">un t-shirt, avec un pantalon classique.</string>
    <string name="longsleeves">un top à manches longues avec un pull ou un sweater. Vous pourriez également avoir besoin d\'un gilet.</string>
    <string name="mediocre">Un temps moyen</string>
    <string name="low_temperatures">De basses températures</string>
    <string name="pull">un top à manches longues avec un gros pull ou un manteau suffisamment chaud. Pensez à des gants/un bonnet !</string>
    <string name="under0">Il va faire moins de 0°C</string>
    <string name="bigcoat">un pull et un très gros manteau, avec écharpe, bonnet, gants, la totale !</string>
    <string name="and_it_rains">et il pleut</string>
    <string name="but_it_rains">mais il pleut</string>
    <string name="and_its_snow">et il neige dehors</string>
    <string name="wtf_snow">mais il neige</string>
    <string name="upcoming_rain">et il pleut dans quelques heures</string>
    <string name="upcoming_rain_but">mais il pleut dans quelques heures</string>
    <string name="upcoming_snow">et il neige dans quelques heures</string>
    <string name="upcoming_snow_but">mais il va neiger dans quelques heures</string>
    <string name="but_sunny">mais il fait soleil</string>
    <string name="advice_hours">Conseil pour les heures à venir :</string>
    <string name="add">AJOUTER !</string>
    <string name="en_anglais">(en anglais)</string>
    <string name="guides">Guides</string>
    <string name="reglages">Réglages</string>
    <string name="apropos">À propos</string>
    <string name="una_vez_que">Une fois que vos vêtements auront été ajoutés, nous pourrons vous faire des recommandations !</string>
    <string name="add_ths">Ajouter trois tops et trois pantalons pour :</string>
    <string name="nouvel_objectif">Nouvel objectif !</string>
    <string name="credits">Swapparel a été créée pour que vous ne perdiez plus de temps le matin et que votre confiance en vous soit toujours au top. N\'hésitez pas à faire passer le mot si l\'appli vous plaît !</string>
    <string name="colors">Couleurs à associer :</string>
    <string name="rain_warning">Attention à la pluie, prenez un parapluie !</string>
    <string name="top" translatable="false">Top</string>
    <string name="pants" translatable="false">Pants</string>
    <string name="combi" translatable="false">Combi</string>
    <string name="let_us_help">Commencez à ajouter vos vêtements pour qu\'on puisse vous aider.</string>
    <string name="only_the_beginning">Ce n\'est que le début !</string>
    <string name="current_objective">Objectif actuel</string>
    <string name="type">Type :</string>
    <string name="what_weather_my_man">Pour quelle météo ?</string>
    <string name="the_more_you_add">Plus vous ajoutez vos vêtements, plus Swapparel s\'améliore et vous propose de meilleurs choix ! Ajoutez</string>
    <string name="end_more">" vêtements pour progresser !"</string>
    <string name="enlarge_your_collection">Agrandissez votre collection !</string>
    <string name="validate">valider</string>
    <string name="delete">Supprimer ?</string>
    <string name="are_you_sure">Êtes-vous sûr de vouloir supprimer ce vêtement ?</string>
    <string name="delete_caps">SUPPRIMER</string>
    <string name="cancel">Annuler</string>
    <string name="quote">Soyez sûr de ce que vous voulez et soyez sûr de vous. La mode n\'est pas seulement une question de beauté, c\'est aussi une question de bonne attitude. Il faut croire en soi et être fort.</string>
    <string name="press_start">COMMENCER !</string>
    <string name="lookin_for_netvork">On cherche du réseau, êtes-vous connecté à Internet ?</string>
    <string name="pants_edit">BAS</string>
    <string name="combi_edit">COMBI</string>
    <string name="zero_and_less">0°C ET MOINS</string>
    <string name="touch_my_butt">Touchez le vêtement pour détecter sa couleur !</string>
    <string name="top_edit" translatable="false">TOP</string>
    <string name="update_features">Fonctionnalité</string>
    <string name="update_translations">Traductions</string>
    <string name="update">Mise à jour !</string>
    <string name="hey">Hey! Vous n\'avez pas encore vu comment on vous recommande un style en fonction de la météo ! Accomplissez cet objectif pour qu\'on puisse vous le montrer !</string>
    <string name="choose_wheel">Choisir sur la roue</string>
    <string name="update_fix" translatable="false">Fix</string>
    <string name="validated">Validé ! :)</string>
    <string name="validating_helps_us">Valider votre tenue chaque matin nous aide à améliorer nos choix !</string>
    <string name="activer">Activer</string>
    <string name="retry">Réessayer</string>
    <string name="swapparel_pro">En passant à <u>Swapparel Pro</u>, vous pourrez ajouter vos chaussures à vos looks, utiliser le moteur de color matching pour les porter avec vos looks, vous supprimez les pubs, mais surtout, vous me permettez de continuer à développer Swapparel !</string>
    <string name="questionmark_1">Des sneakers ?</string>
    <string name="questionmark_2">Pas de pub ?</string>
    <string name="pro_2">(pour le prix d\'un ticket de métro :) )</string>
    <string name="reserved">Réservé aux pros ! :(</string>
    <string name="reserved_long">Il faut avoir acheté la version pro pour ajouter des chaussures. Désolé ! Rendez-vous sur le menu principal pour passer à la version pro ! ;)</string>
    <string name="take_photo_shoes">Prenez vos chaussures en photo !</string>
    <string name="yourepro">Vous êtes pro !</string>
    <string name="thanks">Merci de soutenir Swapparel ! D\'autres fonctionnalités arrivent très vite !</string>
    <string name="touch_shoe">Touchez la chaussure pour détecter sa couleur !</string>
    <string name="perfect_for">Parfait pour ces couleurs de pantalons :</string>
    <string name="new_shoes">Nouvelles chaussures ajoutées !</string>
    <string name="shoes" translatable="false">Shoes</string>
    <string name="what_to_add">Qu\'est-ce qu\'on va ajouter ?</string>
    <string name="clothes">Vêtements</string>
    <string name="shoes_translatable">Chaussures</string>
    <string name="change_this">Changer ça !</string>
    <string name="made_in_massy" translatable="false">Fabriqué à Massy, 2018 &#1041639;</string>
    <string name="choose">choisir</string>
    <string name="display_weather">Afficher ma météo en :</string>
    <string name="not_rated">L\'application n\'est pas très bien notée sur le PlayStore, si vous pouviez lui mettre une bonne note, ça me ferait vraiment plaisir !</string>
    <string name="rate">Noter l\'application</string>
    <string name="up_150_1">Le choix de la langue est maintenant automatique au premier lancement.</string>
    <string name="up_150_2">Nouveau design pour la page Info/Réglages.</string>
    <string name="up_150_3">Nouveau design pour la page Intro au premier lancement.</string>
    <string name="up_150_4">Nouveau design pour la page Vêtements lorsqu\'elle est vide.</string>
    <string name="up_150_5">Suppression de la bannière gênante sur la page Liste des vêtements.</string>
    <string name="up_150_6">Correction d\'une erreur de taille sur la page Vêtements individuels.</string>
    <string name="up_150_7">Correction d\'une erreur de taille sur la page Pro.</string>
    <string name="up_150_8">Améliorations de la traduction chinoise (zh).</string>
    <string name="up_150_9">Corrections et améliorations mineures.</string>
    <string name="devenir_pro">Devenir Pro</string>

</resources>
