<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bcground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle10"
    android:theme="@style/Theme.Transparent">

    <TextView
        android:id="@+id/questionmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/questionmark_1"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toTopOf="@+id/loading_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_view"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:lottie_autoPlay="true"
        app:lottie_fileName="pro.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/pro_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/swapparel_pro"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_view"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/pro_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/pro_2"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pro_text"
        app:layout_constraintVertical_bias="0.17000002" />

    <info.hoang8f.widget.FButton
        android:id="@+id/buy"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/ic_muscle"
        android:paddingRight="12dp"
        android:text="@string/devenir_pro"
        android:textColor="@android:color/white"
        app:fButtonColor="#2ecc71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_text_2"
        app:layout_constraintVertical_bias="0.6"
        app:shadowEnabled="true" />

    <TextView
        android:id="@+id/pro_validated"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/thanks"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loading_view"
        app:layout_constraintVertical_bias="0.127"/>
</androidx.constraintlayout.widget.ConstraintLayout>